# watchingai

./: .gitignore  CLAUDE.md  README.md  build.sh  pyproject.toml  setup.sh
.claude-plugin/: marketplace.json  plugin.json  setup.sh
commands/: watch_off.md  watch_on.md
docs/superpowers/plans/: 2026-04-21-watchingai-plan.md
docs/superpowers/specs/: 2026-04-21-watchingai-design.md
hooks/: hooks.json
tests/: test_config.py  test_sprite.py  test_status.py  test_tray.py  test_widget.py
watchingai/: __main__.py  config.py  sprite.py  status.py  tray.py  widget.py
