[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watchingai"
version = "0.6.0"
description = "Desktop sprite widget that shows Claude Code's working status"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "gmlxo76"},
]
dependencies = [
    "PyQt6>=6.5.0",
]

[project.urls]
Homepage = "https://github.com/gmlxo76/watchingai"
Repository = "https://github.com/gmlxo76/watchingai"

[project.scripts]
watchingai = "watchingai.__main__:main"

[tool.setuptools.packages.find]
include = ["watchingai*"]

[tool.setuptools.package-data]
watchingai = ["assets/*", "icon/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
